[package]
name = "module-earning"
version = "2.26.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

orml-traits = { workspace = true }
primitives = { workspace = true }
module-support = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"primitives/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"module-support/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
