[package]
name = "module-earning"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

orml-traits = { workspace = true }
primitives = { workspace = true }
module-support = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"primitives/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"module-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
