[package]
name = "module-emergency-shutdown"
version = "2.8.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
loans = { package = "module-loans", path = "../loans", default-features = false }
primitives = { package = "acala-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-balances= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
orml-currencies = { path = "../../orml/currencies" }
orml-traits = { path = "../../orml/traits" }
orml-tokens = { path = "../../orml/tokens" }
cdp-treasury = { package = "module-cdp-treasury", path = "../cdp-treasury" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std",
	"support/std",
	"loans/std",
	"primitives/std",
]
try-runtime = ["frame-support/try-runtime"]
