[package]
name = "module-emergency-shutdown"
version = "2.14.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33", default-features = false }
support = { package = "module-support", path = "../support", default-features = false }
loans = { package = "module-loans", path = "../loans", default-features = false }
primitives = { package = "acala-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-balances= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
orml-currencies = { path = "../../orml/currencies" }
orml-traits = { path = "../../orml/traits" }
orml-tokens = { path = "../../orml/tokens" }
cdp-treasury = { package = "module-cdp-treasury", path = "../cdp-treasury" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"loans/std",
	"primitives/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"support/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"loans/try-runtime",
]
