[package]
name = "module-emergency-shutdown"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
module-support = { workspace = true }
module-loans = { workspace = true }
primitives = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances= { workspace = true, features = ["std"] }
orml-currencies = { workspace = true, features = ["std"] }
orml-traits = { workspace = true, features = ["std"] }
orml-tokens = { workspace = true, features = ["std"] }
module-cdp-treasury = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"module-loans/std",
	"primitives/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"module-support/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"module-loans/try-runtime",
]
